# duetcode

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  USAGE.md  duet.toml
.duet/: config.toml
.duet/prompts/: fix.txt  implement.txt  plan.txt  review.txt
.github/workflows/: release.yml
Formula/: dt.rb
editors/vscode/: README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/media/: main.css  main.js
editors/vscode/src/: extension.ts  panel.ts  serveClient.ts  sessions.ts
examples/: duet.toml
prompts/: fix.txt  implement.txt
src/: checks.rs  cli.rs  config.rs  errors.rs  events.rs  git.rs  logs.rs  main.rs  orchestrator.rs  policy.rs  prompts.rs  repl.rs  serve.rs  ui.rs
src/adapters/: claude.rs  gemini.rs  mod.rs  pricing.rs
