[package]
name = "dt"
version = "0.1.0"
edition = "2021"
description = "AI pair programming CLI — one model writes, another reviews, in a loop until approval"
license = "MIT"
repository = "https://github.com/sriharsha/duetcode"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
colored = "3"
chrono = "0.4"
